@@ -70,6 +70,7 @@
 
  \details{
    Internally \code{\link{segmentByCBS}}() is used for segmentation.
+
    This segmentation method does \emph{not} support weights.
 
    The "DNAcopy::segment" implementation of CBS uses approximation
